Keep the topology ledger as indexed live collections
Queuing an event and applying one used to build and validate a whole
ledger snapshot (every registration, every position) each time, and
the registry view copied every registration after each event. The
ledger now keeps its applied and queued registries, their position
indexes, the queue and the accounting as live collections, validates
an event against an overlay of the positions it changes, and builds a
Snapshot only when one is asked for (a save), sharing the same
immutable parts until the ledger changes so a save still keeps the
encoding of an unchanged ledger. Snapshot validation and the saved
format are unchanged.

applyBatch stages several queued events of one application in queue
order, each checked against the ones before it; every event of a batch
must meet no earlier event left out of it.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>